# MNSC

./: CMakeLists.txt  README.md  first  main.cpp
cmake-build/: bif_gnu  first_gnu  it_gnu  newton_gnu  path_gnu
newton/: CMakeLists.txt  newton_method.cpp  newton_method.h
simple_iteration/: CMakeLists.txt  bifurcation.cpp  bifurcations.cpp  constants.h  iterations.cpp  iterations.h  simple_iterations.h
